fixed minor header overlap

--- a/profile/studentprofile/style.css
+++ b/profile/studentprofile/style.css
@@ -37,6 +37,7 @@ header {
 	position: fixed;
 	top: 0px;
 	background: white;
+	z-index: 1;
 }
 
 header .logo {
